--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                       </p>
                       <ul class="list-ico">
                         <li>
-                          <span class="ion-email"></span> omasharx@yahoo.com
+                          <span class="ion-email"></span> onelove@omashar.com
                         </li>
                       </ul>
                     </div>
