--- a/index.html
+++ b/index.html
@@ -97,10 +97,11 @@
           <div class="container">
             <!-- <h1 class="intro-title mb-4">Omashar</h1> -->
             <p class="intro-subtitle">
-              <span class="text-slider-items"
-                >Metaphysical Musician, Channeling the divine through music,
-                Namasté</span
-              ><strong class="text-slider"></strong>
+              <span class="text-slider-items">
+                Metaphysical Musician, Bringing forth the Divine through music,
+                Namasté
+              </span>
+              <strong class="text-slider"></strong>
             </p>
             <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
           </div>
@@ -116,7 +117,7 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">Announcements</h3>
-              <p class="subtitle-a">Here's what Omashar has coming up...</p>
+              <p class="subtitle-a">Here's what Omashar is up to...</p>
               <div class="line-mf"></div>
             </div>
           </div>
@@ -532,8 +533,7 @@
                     </div>
                     <div class="more-info">
                       <p class="lead">
-                        Please reach out by email using my email address listed
-                        below for any inquiries, much love!
+                        Feel free to reach out via email for any inquiries, love always 🌹
                       </p>
                       <ul class="list-ico">
                         <li>
@@ -576,18 +576,8 @@
             <div class="col-sm-12">
               <div class="copyright-box">
                 <p class="copyright">
-                  &copy; Copyright <strong>Omashar</strong>. All Rights Reserved
+                  &copy; <strong>Source Productions International</strong>
                 </p>
-                <div class="credits">
-                  <!--
-                  All the links in the footer should remain intact.
-                  You can delete the links only if you purchased the pro version.
-                  Licensing information: https://bootstrapmade.com/license/
-                  Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
-                -->
-                  Designed by
-                  <a href="https://bootstrapmade.com/">BootstrapMade</a>
-                </div>
               </div>
             </div>
           </div>
