--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
           <div class="col-md-4">
             <div class="links-box">
               <div class="links-ico">
-                <a href="https://www.facebook.com/Omashar/" target="_blank">
+                <a href="https://www.facebook.com/omashar.sanjaya" target="_blank">
                   <span class="ico-circle">
                     <i class="ion-social-facebook"></i>
                   </span>
