--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                         </li>
                         <li>
                           <a
-                            href="https://www.facebook.com/Omashar/"
+                            href="https://www.facebook.com/omashar.sanjaya"
                             target="_blank"
                           >
                             <span class="ico-circle">
