--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
             <!-- <h1 class="intro-title mb-4">Omashar</h1> -->
             <p class="intro-subtitle">
               <span class="text-slider-items">
-                Metaphysical Musician, Bringing forth the Divine through music,
-                Namasté
+                Metaphysical Musician (MetaPop), Bringing forth the Divine through Sound, Namasté Beloved Family
               </span>
               <strong class="text-slider"></strong>
             </p>
@@ -404,7 +403,10 @@
           <div class="col-md-4">
             <div class="links-box">
               <div class="links-ico">
-                <a href="https://www.facebook.com/omashar.sanjaya" target="_blank">
+                <a
+                  href="https://www.facebook.com/omashar.sanjaya"
+                  target="_blank"
+                >
                   <span class="ico-circle">
                     <i class="ion-social-facebook"></i>
                   </span>
@@ -429,8 +431,9 @@
               <div class="links-content">
                 <h2 class="s-title">Omashar's recommendations</h2>
                 <p class="s-description text-center">
-                  Here is a short list of sites from people who have touched my
-                  life and aided in my own personal transformation:
+                  Here is a short list of sites from people and organizations
+                  who have touched my life and aided in my own personal
+                  transformation:
                 </p>
                 <div class="row">
                   <div class="col-md-4 recommended-link">
@@ -439,24 +442,21 @@
                     </a>
                   </div>
                   <div class="col-md-4 recommended-link">
-                    <a
-                      href="https://www.radiantroseacademy.com/"
-                      target="_blank"
-                    >
-                      The Radiant Rose Academy
+                    <a href="https://unity.earth/" target="_blank">
+                      Celebrating Unity
                     </a>
                   </div>
                   <div class="col-md-4 recommended-link">
-                    <a href="http://www.kamadonacademy.com/" target="_blank">
-                      The Melchizedek Method
+                    <a href="https://www.globalpeacetribe.com" target="_blank">
+                      The Awakening World
                     </a>
                   </div>
                 </div>
 
                 <div class="row link-row-padded">
                   <div class="col-md-4 recommended-link">
-                    <a href="http://www.laurensongs.com/" target="_blank">
-                      Songbird music/Lauren Pomerantz
+                    <a href="https://www.soulsearch.io/" target="_blank">
+                      Spiritual and Holistic Practitioners
                     </a>
                   </div>
 
@@ -466,16 +466,16 @@
                     </a>
                   </div>
                   <div class="col-md-4 recommended-link">
-                    <a href="https://www.iamuniversity.org/" target="_blank">
-                      I AM UNIVERSITY
+                    <a href="https://www.unite.love/" target="_blank">
+                      Elevating Global Happiness
                     </a>
                   </div>
                 </div>
 
                 <div class="row link-row-padded">
                   <div class="col-md-4 recommended-link">
-                    <a href="https://www.ksccrystals.com/" target="_blank">
-                      Excellent source of crystals
+                    <a href="https://edenamadora.com/" target="_blank">
+                      Eden Amadore. ‘Lead With Love’
                     </a>
                   </div>
 
@@ -497,13 +497,48 @@
                 <div class="row link-row-padded">
                   <div class="col-md-4 recommended-link">
                     <a href="https://www.ourtrustisingod.com/" target="_blank">
-                      Norma Milanovich
+                      Athena Leadership Centre
                     </a>
                   </div>
 
                   <div class="col-md-4 recommended-link">
                     <a href="https://www.jasonshonbennett.com/" target="_blank">
                       Exceptional health
+                    </a>
+                  </div>
+                  <div class="col-md-4 recommended-link">
+                    <a
+                      href="https://pure-presence-productions.mykajabi.com/home"
+                      target="_blank"
+                    >
+                      Pure Presence Conferences
+                    </a>
+                  </div>
+                </div>
+
+                <div class="row link-row-padded">
+                  <div class="col-md-4 recommended-link">
+                    <a href="https://www.teachersofgod.org/" target="_blank">
+                      Teachers of God Foundation
+                    </a>
+                  </div>
+
+                  <div class="col-md-4 recommended-link">
+                    <a href="https://www.om-heals.com/" target="_blank">
+                      Remote energy medicine sessions
+                    </a>
+                  </div>
+                  <div class="col-md-4 recommended-link">
+                    <a href="https://www.iamuniversity.org/" target="_blank">
+                      Education for the Age of Awakening
+                    </a>
+                  </div>
+                </div>
+
+                <div class="row link-row-padded">
+                  <div class="col-md-4 recommended-link">
+                    <a href="https://radiantroseacademy.com/" target="_blank">
+                      A Global Educational Platform of Enlightenment
                     </a>
                   </div>
                 </div>
@@ -533,7 +568,8 @@
                     </div>
                     <div class="more-info">
                       <p class="lead">
-                        Feel free to reach out via email for any inquiries, love always 🌹
+                        Feel free to reach out via email for any inquiries, love
+                        always 🌹
                       </p>
                       <ul class="list-ico">
                         <li>
