--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
                 /></a>
               </div>
               <div class="card-body">
-                <div class="card-category-box">
+                <!-- <div class="card-category-box">
                   <div class="card-category">
                     <h6 class="category">Weekly</h6>
                   </div>
-                </div>
+                </div> -->
                 <h3 class="card-title">THE GLOBAL PEACE TRIBE</h3>
                 <p class="card-description">
                   Join us every <i><u>Wednesday + Saturday night</u></i> and
@@ -165,11 +165,11 @@
                 <a><img src="img/many_paths.png" alt="" class="img-fluid" /></a>
               </div>
               <div class="card-body">
-                <div class="card-category-box">
+                <!-- <div class="card-category-box">
                   <div class="card-category">
                     <h6 class="category">Coming Soon</h6>
                   </div>
-                </div>
+                </div> -->
                 <h3 class="card-title">MANY PATHS ONE SELF CONFERENCE</h3>
                 <p class="card-description">
                   I Am honored to be a part of the "Many paths:One self" 'The
@@ -623,7 +623,9 @@
     <!--/ Section Contact-footer End /-->
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-    <div id="preloader"></div>
+    <div id="preloader">
+      <img src="img/heart_gif.gif" />
+    </div>
 
     <!-- JavaScript Libraries -->
     <script src="lib/jquery/jquery.min.js"></script>
